# scientific-analysis-agent

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: FILTER_SYSTEM.md  LOGGING_RULES.md  TODO.md  prd.md
src/cpp/: CMakeLists.txt  engine.cpp  engine.h
src/python/: config.py  env.example  main.py  types.py
src/python/agent/: __init__.py  graph.py  models.py  state.py  tools.py
src/python/agent/tools/: __init__.py  context.py  filter.py  interaction.py  loader.py  pipeline.py  visualization.py
src/python/app/: main_window.py  vtk_widget.py
src/python/filters/: __init__.py  clip_filter.py  filter_base.py  slice_filter.py
src/python/models/: __init__.py  filter_params.py  pipeline_item.py  properties_context.py
src/python/services/: __init__.py  file_loader_service.py  vtk_render_service.py
src/python/utils/: app_context.py  logger.py  tool_registry.py
src/python/viewmodels/: __init__.py  chat_viewmodel.py  pipeline_viewmodel.py  time_series_manager.py  vtk_viewmodel.py
src/python/views/: __init__.py  chat_panel.py  common_widgets.py  main_window.py  pipeline_browser.py  properties_panel.py  time_animation_widget.py  vtk_widget.py
